# disaster_prediction

./: .gitignore  LICENSE  Makefile  README.md  Using BERT to predict disaster Tweets.ipynb  environment.yml  pyproject.toml  script.py
disaster_prediction/: dataset.py  model_controller.py  model_specs.py  models.py  utils.py
disaster_prediction/models/: large.py  small.py
docs/: mkdocs.yml
docs/docs/: index.md
nlp_with_disaster_tweets/: dataset.py  models.py
notebooks/: 01-downloading-the-data.ipynb  02-exploring-and-viewing-the-data.ipynb  03-make-train-val-data-split.ipynb  04-bert-base-uncased-on-text-only.ipynb  06-bert-large-on-text-and-base-on-keyword.ipynb
