[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlp_with_disaster_tweets"
version = "0.0.1"
description = "Predict which Tweets are about real disasters and which ones are not"
authors = [
  { name = "Ibrahim Habib" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["nlp_with_disaster_tweets"]
force_sort_within_sections = true
