[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "disaster_prediction"
version = "0.0.1"
description = "Predict which Tweets are about real disasters and which ones are not"
authors = [
  { name = "Ibrahim Habib" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"
